Changing versions and adding -mem flag for stage command