@@ -1,4 +1,4 @@
-FROM nightscape/docker-sbt
+FROM hseeberger/scala-sbt
 
 MAINTAINER Taylor Brown
 
@@ -8,10 +8,7 @@ ADD . /opt/app
 
 WORKDIR /opt/app
 
-#RUN rm -rf /opt/app/target /opt/app/project/project /opt/app/project/target
-RUN export SBT_OPTS="-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M"
-
-RUN sbt stage
+RUN sbt -mem 128 stage
 
 RUN ls
 
